# pbr_objects

./: .mdl_style.rb  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
config/: class_ids.yaml  dimensions.yaml  draw_colors.yaml  meshes.yaml  model_transforms.yaml  textured_meshes.yaml
meshes/003_cracker_box/: 003_cracker_box.stl
meshes/004_sugar_box/: 004_sugar_box.mtl  004_sugar_box.stl
meshes/005_tomato_soup_can/: 005_tomato_soup_can.stl
meshes/006_mustard_bottle/: 006_mustard_bottle.stl
meshes/009_gelatin_box/: 009_gelatin_box.stl
meshes/010_potted_meat_can/: 010_potted_meat_can.stl
meshes/021_bleach_cleanser/: 021_bleach_cleanser.stl
meshes/cantilever_chair/: cantilever_chair.stl
meshes/hot_glue_gun/: hot_glue_gun.mtl  hot_glue_gun_simplified.stl
meshes/insect_hotel/black_part/: black_part.mtl  black_part.stl
meshes/insect_hotel/bright_green_part/: bright_green_part.mtl  bright_green_part.stl  bright_green_part_EinScan.mtl
meshes/klt/: klt3147.mtl  klt3147.stl  model_info.json
meshes/materialbox/: materialbox.mtl  materialbox.stl
meshes/materialbox_with_door/: materialbox_with_door.mtl  materialbox_with_door.stl
meshes/multimeter/: multimeter.mtl  multimeter.stl
meshes/power_drill/: power_drill.stl  power_drill_reduced.obj.mtl
meshes/power_drill_with_grip/: power_drill_with_grip.obj.mtl  power_drill_with_grip.stl  power_drill_with_grip_simplified.stl
meshes/relay/: relay.mtl  relay.stl
meshes/screwdriver/: model_info.json  screwdriver.mtl  screwdriver.stl
meshes/type_2_css_socket/: type_2_css_socket.mtl
(+9 files in other folders)
